--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   
  
     <h1 style="color:red;">Select Mobile Brand </h1><HR><center>
-        <a href="file:///D:/mobile%20combo%20website/web2%20.html"><img src="D:\mobile combo website\model\oppo.jpeg"></a>
+        <a href="file:///D:/mobile%20combo%20website/web2%20.html"><img src="oppo.jpeg"></a>
         <a href="file:///D:/mobile%20combo%20website/WEB%203.HTML"><img src="D:\mobile combo website\model\redmi.jpeg"></a>
         <a href="file:///D:/mobile%20combo%20website/web%205%20for%20realme.html"><img src="D:\mobile combo website\model\realme.jpeg"></a>
         <a href="file:///D:/mobile%20combo%20website/WEB%204%20FOR%20VIVO.HTML"><img src="D:\mobile combo website\model\vivo.jpeg"></a>
